fixing alignment issue

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -119,6 +119,10 @@ p {
   height: 3rem;
 }
 
+.p-fluid .p-buttonset {
+  height: 3.2rem;
+}
+
 #field-help {
   font-style: italic;
   display: block;
